0811/deploynginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdeploy
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qingdao
  template:
    metadata:
      labels:
        app: qingdao
    spec:
      containers:
        - name: nginx
          image: nginx:1.16
          ports:
            - containerPort: 80
              name: nginxport
