0811/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdsvc
  namespace: qingdao
  labels:
    app: qingdao
spec:
  selector:
    app: qingdao
  ports:
    - port: 30303
      targetPort: 80
