0811/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
        - path: /nginxweb
          pathType: Prefix
          backend:
            service:
              name: qdsvc
              port:
                number: 30303
